--- a/DACDemo/Server/DACDemo.Server.csproj
+++ b/DACDemo/Server/DACDemo.Server.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Azure.Identity" Version="1.4.0" />
     <PackageReference Include="Azure.Storage.Blobs" Version="12.8.3" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="5.0.6" />
+    <PackageReference Include="Microsoft.Graph" Version="3.32.0" />
   </ItemGroup>
 
   <ItemGroup>
